Core functionality 3 done

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,12 @@
           <a class="nav-link" href="{{ url_for('upload_meeting') }}">
             <i class="fas fa-cloud-upload-alt"></i> Upload
           </a>
+          <a class="nav-link" href="{{ url_for('search_meetings') }}">
+            <i class="fas fa-search"></i> Search
+          </a>
+          <a class="nav-link" href="{{ url_for('cross_meeting_insights') }}">
+            <i class="fas fa-chart-line"></i> Insights
+          </a>
         </div>
       </div>
     </nav>
