Added DALLE for visual generation

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,6 +99,9 @@
           <a class="nav-link" href="{{ url_for('cross_meeting_insights') }}">
             <i class="fas fa-chart-line"></i> Insights
           </a>
+          <a class="nav-link" href="{{ url_for('visual_gallery') }}">
+            <i class="fas fa-images"></i> Visuals
+          </a>
         </div>
       </div>
     </nav>
