--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,9 @@
           <a class="nav-link" href="{{ url_for('search_meetings') }}">
             <i class="fas fa-search"></i> Search
           </a>
+          <a class="nav-link" href="{{ url_for('search_translations') }}">
+            <i class="fas fa-language"></i> Translations
+          </a>
           <a class="nav-link" href="{{ url_for('cross_meeting_insights') }}">
             <i class="fas fa-chart-line"></i> Insights
           </a>
